<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".SettingActivity">

  <TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/settingDescription"
        android:textAlignment="center"
        android:textSize="34sp" />
    </TableRow>

    <TableRow android:layout_marginTop="30dp">

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/convertFromDescription"
        android:textSize="26sp" />

      <Spinner
        android:id="@+id/convertFromSpinner"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow android:layout_marginTop="30dp">

      <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:text="@string/convertToDescription"
        android:textSize="26sp" />

      <Spinner
        android:id="@+id/convertToSpinner"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_weight="1"
        tools:ignore="SpeakableTextPresentCheck" />
    </TableRow>

    <TableRow android:layout_marginTop="30dp">

      <Button
        android:id="@+id/applyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="applyBtnClicked"
        android:text="@string/applyBtnLabel"
        android:textSize="26sp" />
    </TableRow>
  </TableLayout>
</ScrollView>
